# rigy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
composition/: car.rigy.yaml  simple.risy.yaml
composition/parts/: wheel.ricy.yaml  wheel.rigy.yaml
conformance/: manifest.json
conformance/inputs/: C0901_wedge_2x2x2.rigy.yaml  E01_humanoid.rigy.yaml  F114_macro_id_collision.rigy.yaml  F115_aabb_with_transform.rigy.yaml  F116_invalid_cutout_id.rigy.yaml  H110_box_aabb_basic.rigy.yaml  H111_box_decompose_single_cutout.rigy.yaml  (+34 more)
examples/: kids_house.rigy.yaml  kids_house_prompt.md
spec/: rigs_layout_dsl_draft.md  rigs_spec_v0.1-rc1.md  rigy_spec_v0.1-rc2_with_rigs_roadmap.md  rigy_spec_v0.10.md  rigy_spec_v0.10_amendment_rc1.md  rigy_spec_v0.11-amendment-rc2.md  rigy_spec_v0.2-rc2.md  rigy_spec_v0.3-rc2.md  rigy_spec_v0.4-rc3.md  rigy_spec_v0.5-amendment-rc2.md  rigy_spec_v0.6-amendment-rc2.md  rigy_spec_v0.6-rc1.md  rigy_spec_v0.7-amendment-rc4.md  rigy_spec_v0.8-rc1.md  rigy_spec_v0.9-amendment-rc4.md  sigy_spec_v0.1-draft.md
tests/: conftest.py  test_attach3.py  test_cli.py  test_composition.py  test_conformance.py  test_contracts.py  test_dqs.py  test_e2e.py  test_exporter.py  test_formatter.py  test_models.py  test_parser.py  test_preprocessing.py  test_rigs_composition.py  test_rigs_e2e.py  test_rigs_models.py  test_rigs_parser.py  test_rigs_placement.py  test_rigs_validation.py  test_skinning.py  test_symmetry.py  test_tessellation.py  test_uv.py  test_v012.py  test_validation.py  test_warning_policy.py  test_weight_maps.py
(+101 files in other folders)
